067 ==> 385269 - [DK 5.7] database migration sqlite -> mysql external server fails.
068 ==> 386663 - Crash with Samsung Galaxy S7 in the import tool.
069 ==> 384849 - Database dropped when network collection not mounted.
070 ==> 386874 - Cursor changes to forbidden symbol when dragging picture(s) to map.
071 ==> 381432 - Olympus ORF files to DNG conversion fails in Windows 10.
072 ==> 385471 - Geolocation Editor Opens Map To A Random Location.
073 ==> 387000 - GPS Longitude Decimalisation Appears Incorrect In Map.
074 ==> 386785 - Change needed for separator in ignore list (currently blank space).
075 ==> 375346 - Many tags disappeared from database.
076 ==> 383326 - Moving a tag does not update the parent tag correctly
077 ==> 386606 - Tags search is broken after moving tags (invalid lft/rgt columns).
078 ==> 386676 - Multi-processor conversion.
079 ==> 342427 - Timing issues when large GPX file is loaded and option "Show tracks on Map" is used with GoogleMaps.
080 ==> 375569 - Wrong tags in tooltips.
081 ==> 371578 - Untagged images no longer shown in "no tags" overview when removing existing tag.
082 ==> 387171 - Advanced search by lens by single focal length.
083 ==> 387165 - XMP files generated for Batchtool temporary files and not removed.
084 ==> 228015 - Search by lens.
085 ==> 378838 - Initializing MySQL/MariaDB database or migrating from SQLite cancels with DB errors.
086 ==> 369083 - database migration sets wrong parent ids for tags.
087 ==> 350574 - MIGRATION: MySQL to SQLite fails about Tags tree [patch].
088 ==> 325654 - MIGRATION: tags are not shown afterwards, because pid has wrong value.
089 ==> 385297 - Search results are case sensitive on MySQL remote database.
090 ==> 373605 - Failed to update database schema from version 7 to version 8.
091 ==> 286492 - MIGRATION : two SQLITE triggers applied for the same table is not supported by MySQL database.
092 ==> 